--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>iBank Promo</title>
 	<link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
-	<scrtip src="js/index.js"></scrtip>
+	<div class="wrapper">
+
+
+		<header id="header">
+
+			<div class="header-logos">
+				<a href="javascript:void(0)" class="logo-ibank" title="iBank - интерактивный банк">
+					<img src="img/logo.png" alt="">
+				</a>
+				<a href="javascript:void(0)" class="logo-model" title="Model Alliance">
+					<img src="img/model.png" alt="Model Alliance">
+				</a>
+			</div>
+
+			<h1 class="main-title" title="iFashion event">
+				<img src="img/title.png" alt="iFashion event">
+			</h1>
+
+		</header>
+
+
+		<section class="content">
+
+			<h2>
+				Закажите первую fashion карту <span>VISA Platinum</span> <br>от iBank и Model Alliance
+			</h2>
+
+			<div class="content-img">
+				<img src="img/card.png" alt="iBank VISA platinum" title="iBank VISA platinum">
+			</div>
+
+			<form class="content-form">
+				<div class="form-item-row">
+					<input type="text" name="name" placeholder="ФИО">
+				</div>
+				<div class="form-item-row">
+					<input type="tel" name="phone" placeholder="Моб. номер">
+				</div>
+				<div class="form-item-row">
+					<input type="email" name="email" placeholder="@">
+				</div>
+				<div class="form-item-row">
+					<input type="text" name="category" placeholder="Категория пользователя">
+				</div>
+				<div class="form-item-row">
+					<button>Оформить карту</button>
+				</div>
+			</form>
+
+		</section>
+
+
+		<footer id="footer">
+
+			<ul class="partners-list">
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_1.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_2.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_3.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_4.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_5.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_6.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_7.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_8.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_9.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_10.png" alt=""></a></li>
+				<li><a href="javascript:void(0)"><img src="img/partners/logo_11.png" alt=""></a></li>
+			</ul>
+
+		</footer>
+
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
