--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
 			<form class="content-form">
 				<div class="form-item-row">
-					<input type="text" name="name" placeholder="ФИО" required>
+					<input type="text" name="name" id="name" placeholder="ФИО" required>
 				</div>
 				<div class="form-item-row">
-					<input type="tel" pattern="(\+?\d[- .]*){7,13}" name="phone" placeholder="Моб. номер" required>
+					<input type="tel" id="phone" name="phone" placeholder="Моб. номер" required>
 				</div>
 				<div class="form-item-row">
 					<input type="email" name="email" placeholder="@" required>
@@ -89,5 +89,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/input_mask.js"></script>
+	<script src="js/jquery.validate.js"></script>
 </body>
 </html>
